# RAGPractise

./: pyproject.toml
0-DataParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataParsing/data/databases/: company.db
0-DataParsing/data/structured_files/: inventory.xlsx
1-VectorEmbeddings/: embedding.ipynb  openaiembeddings.ipynb
2-VectorDB/: 1-chromadb.ipynb  1-chromadbPractise.ipynb  2-faiss-Practise.ipynb  3-Othervectorstores.ipynb  3-otherVectorstoresPractise.ipynb  Datastaxdb.ipynb
2-VectorDB/chroma_db/: chroma.sqlite3
2-VectorDB/faiss_index/: index.faiss  index.pkl
3-AdvancedPreprocessing/: 1-sementicChunkingPractise.ipynb
4-HybridSearch/: 1-denseparsePractise.ipynb  1-densesparse.ipynb  2-rerankingPractise.ipynb
5-QueryEnhancement/: 2-queryDecompositionPractise.ipynb  3-HydePractise.ipynb
5-QueryEnhancement/output/langchain/: chroma.sqlite3
6-MultiModelRAG/: 1-multimodalopenai.ipynb  1-multimodelPractise.ipynb
8-LangGraph/: 1-SimpleLangGraph.ipynb  1-simplegraph.ipynb  2-ChatbotPractise.ipynb
